data/derived/comb/progs/unify/prog7678.ml.out
Characters 153-154:
  List.fold_left f base l;;
                        ^
Error: This expression has type string but an expression was expected of type
         'a list
